Fix styling of more menu
Only shift it down on topic titlebar so it doesn't overlap
watchlist.

Bug: 68262

--- a/modules/new/styles/board/topic/titlebar.less
+++ b/modules/new/styles/board/topic/titlebar.less
@@ -26,6 +26,11 @@
 	&:hover + .flow-post {
 		opacity: .85;
 	}
+
+	// use child selector to block ie6
+	.flow-menu {
+		top: 1.5em;
+	}
 }
 
 
